--- a/html_css_part/index.html
+++ b/html_css_part/index.html
@@ -64,26 +64,35 @@
         </li>
     </ol>
 
-    <h2>Fourth Task</h2>
-    <div style="background-color: #faf2e4;">    
-    <h1 align="center">
-        <img src="blackgoose.png" alt="Black Goosse logo">
-        <br>
-        <font face="Serif">Black Goose Bistro</font>
-    </h1>
-    <hr>
-    <h2 style="color: #d1633c">The Restaurant</h2>
-    <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to
-        highlight the freshest local ingredients.</p>
 
-    <h2 style="color: #d1633c">Catering</h2>
-    <p>You have fun. We'll handle the cooking. Black Goose Catering can handle events from snacks for a meetup to
-        elegant corporate fundraisers.</p>
 
-    <h2 style="color: #d1633c">Location and Hours</h2>
-    <p>Seekonk, Massachusetts;
-        Monday through Thursday 11am to 9pm;
-        Friday and Saturday, 11am to midnight</p>
+
+
+    <div style="background-color: #faf2e4;">
+        <font face="sans-Serif">
+            <h2>Fourth Task</h2>
+            <h1 align="center">
+                <img src="blackgoose.png" alt="Black Goosse logo">
+                <br>
+                <font face="serif">Black Goose Bistro</font>
+            </h1>
+            <hr>
+            <h2 style="color: #d1633c">The Restaurant</h2>
+            <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes
+                regularly to
+                highlight the freshest local ingredients.</p>
+
+            <h2 style="color: #d1633c">Catering</h2>
+            <p>You have fun.<i> We'll handle the cooking</i>. Black Goose Catering can handle events from snacks for a
+                meetup to
+                elegant corporate fundraisers.
+
+            <h2 style="color: #d1633c">Location and Hours</h2>
+            <pre><font face="sans-Serif">Seekonk, Massachusetts;
+Monday through Thursday 11am to 9pm;
+Friday and Saturday, 11am to midnight</font>
+    </pre>
+        </font>
     </div>
 
 </body>
